# spider_info_checker

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
spider_info_checker/: check_info.py  checkers.py  config.py  errors.py  misc.py  models.py  templates.py  transformers.py  validators.py  visitors.py
