[metadata]
name = spider_info_checker
version = 0.0.12
author = Aleksej Shmelev
author_email = aleksejshmel@yandex.ru
description = Checking constant files for correct spiders info
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pojknamn/spider_info_checker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True